--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="index.html">
-        <img src="img/logo.svg" alt="brand" height="10">
+        <h3>Demo Red Hat OpenShift</h3>
       </a>
     </div>
   </nav>
